Bug 348708 - KF5/KMail: Crash when sending mail
Summary: KF5/KMail: Crash when sending mail
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2015-06-04 17:29 UTC by Andreas Cord-Landwehr
Modified: 2015-06-05 06:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Cord-Landwehr 2015-06-04 17:29:10 UTC
Application: kmail (4.76 pre)
 (Compiled from sources)
Qt Version: 5.4.2
Operating System: Linux 3.16.0-4-amd64 x86_64
Distribution: Debian GNU/Linux testing (stretch)

-- Information about the crash:
- What I was doing when the application crashed:
The composer window was open, I wrote a mail, crash ummediately after click at "Send".

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f114389f900 (LWP 13466))]

Thread 6 (Thread 0x7f1137842700 (LWP 13470)):
#0  0x00007f11634cb50d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007f115dfe1ebc in g_main_context_iterate (priority=2147483647, n_fds=1, fds=0x7f1130003070, timeout=7199, context=0x7f1130000990) at /build/glib2.0-NiYzoW/glib2.0-2.44.1/./glib/gmain.c:4103
#2  0x00007f115dfe1ebc in g_main_context_iterate (context=context@entry=0x7f1130000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/glib2.0-NiYzoW/glib2.0-2.44.1/./glib/gmain.c:3803
#3  0x00007f115dfe1fcc in g_main_context_iteration (context=0x7f1130000990, may_block=1) at /build/glib2.0-NiYzoW/glib2.0-2.44.1/./glib/gmain.c:3869
#4  0x00007f1164361fbb in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7f11300008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#5  0x00007f11642e5962 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7f1137841c60, flags=...) at kernel/qeventloop.cpp:128
#6  0x00007f11642e5c3b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7f1137841c60, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f116406980e in QThread::exec() (this=0x18898d0) at thread/qthread.cpp:503
#8  0x00007f11640699b0 in QThread::run() (this=0x18898d0) at thread/qthread.cpp:570
#9  0x00007f1164070d39 in QThreadPrivate::start(void*) (arg=0x18898d0) at thread/qthread_unix.cpp:337
#10 0x00007f11601be0a4 in start_thread (arg=0x7f1137842700) at pthread_create.c:309
#11 0x00007f11634d404d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 5 (Thread 0x7f1136df1700 (LWP 13471)):
#0  0x00007f11601c208f in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f11713c2972 in WTF::ThreadCondition::wait(WTF::Mutex&) (this=0x1beb588, mutex=...) at wtf/ThreadingPthreads.cpp:378
#2  0x00007f11710b8348 in JSC::BlockAllocator::blockFreeingThreadMain() (this=0x1beb378) at heap/BlockAllocator.cpp:139
#3  0x00007f11710b8286 in JSC::BlockAllocator::blockFreeingThreadStartFunc(void*) (blockAllocator=0x1beb378) at heap/BlockAllocator.cpp:115
#4  0x00007f11713a8a35 in WTF::threadEntryPoint(void*) (contextData=0x1811d30) at wtf/Threading.cpp:69
#5  0x00007f11713c219a in WTF::wtfThreadEntryPoint(void*) (param=0x179dbb0) at wtf/ThreadingPthreads.cpp:195
#6  0x00007f11601be0a4 in start_thread (arg=0x7f1136df1700) at pthread_create.c:309
#7  0x00007f11634d404d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 4 (Thread 0x7f11365d1700 (LWP 13472)):
#0  0x00007f11601c208f in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f11713c2972 in WTF::ThreadCondition::wait(WTF::Mutex&) (this=0x1bf40b0, mutex=...) at wtf/ThreadingPthreads.cpp:378
#2  0x00007f11710ba7d1 in JSC::GCThread::waitForNextPhase() (this=0x184f670) at heap/GCThread.cpp:81
#3  0x00007f11710ba949 in JSC::GCThread::gcThreadMain() (this=0x184f670) at heap/GCThread.cpp:99
#4  0x00007f11710ba98a in JSC::GCThread::gcThreadStartFunc(void*) (data=0x184f670) at heap/GCThread.cpp:135
#5  0x00007f11713a8a35 in WTF::threadEntryPoint(void*) (contextData=0x1811d30) at wtf/Threading.cpp:69
#6  0x00007f11713c219a in WTF::wtfThreadEntryPoint(void*) (param=0x1853230) at wtf/ThreadingPthreads.cpp:195
#7  0x00007f11601be0a4 in start_thread (arg=0x7f11365d1700) at pthread_create.c:309
#8  0x00007f11634d404d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 3 (Thread 0x7f1135dd0700 (LWP 13473)):
#0  0x00007f11601c208f in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f11713c2972 in WTF::ThreadCondition::wait(WTF::Mutex&) (this=0x1bf40b0, mutex=...) at wtf/ThreadingPthreads.cpp:378
#2  0x00007f11710ba7d1 in JSC::GCThread::waitForNextPhase() (this=0x1774cf0) at heap/GCThread.cpp:81
#3  0x00007f11710ba949 in JSC::GCThread::gcThreadMain() (this=0x1774cf0) at heap/GCThread.cpp:99
#4  0x00007f11710ba98a in JSC::GCThread::gcThreadStartFunc(void*) (data=0x1774cf0) at heap/GCThread.cpp:135
#5  0x00007f11713a8a35 in WTF::threadEntryPoint(void*) (contextData=0x179d240) at wtf/Threading.cpp:69
#6  0x00007f11713c219a in WTF::wtfThreadEntryPoint(void*) (param=0x1774d20) at wtf/ThreadingPthreads.cpp:195
#7  0x00007f11601be0a4 in start_thread (arg=0x7f1135dd0700) at pthread_create.c:309
#8  0x00007f11634d404d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 2 (Thread 0x7f11355cf700 (LWP 13474)):
#0  0x00007f11601c208f in pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f11713c2972 in WTF::ThreadCondition::wait(WTF::Mutex&) (this=0x1bf40b0, mutex=...) at wtf/ThreadingPthreads.cpp:378
#2  0x00007f11710ba7d1 in JSC::GCThread::waitForNextPhase() (this=0x17a2ec0) at heap/GCThread.cpp:81
#3  0x00007f11710ba949 in JSC::GCThread::gcThreadMain() (this=0x17a2ec0) at heap/GCThread.cpp:99
#4  0x00007f11710ba98a in JSC::GCThread::gcThreadStartFunc(void*) (data=0x17a2ec0) at heap/GCThread.cpp:135
#5  0x00007f11713a8a35 in WTF::threadEntryPoint(void*) (contextData=0x1811d30) at wtf/Threading.cpp:69
#6  0x00007f11713c219a in WTF::wtfThreadEntryPoint(void*) (param=0x1271190) at wtf/ThreadingPthreads.cpp:195
#7  0x00007f11601be0a4 in start_thread (arg=0x7f11355cf700) at pthread_create.c:309
#8  0x00007f11634d404d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111

Thread 1 (Thread 0x7f114389f900 (LWP 13466)):
[KCrash Handler]
#6  0x00007f116529d114 in QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::data() const (this=0xe4006e0020007b) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:135
#7  0x00007f11654af081 in qGetPtrHelper<QScopedPointer<QObjectData> >(QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> > const&) (p=...) at ../../include/QtCore/../../src/corelib/global/qglobal.h:962
#8  0x00007f11654af4f2 in QTextEdit::d_func() const (this=0xe4006e00200073) at ../../include/QtWidgets/../../src/widgets/widgets/qtextedit.h:59
#9  0x00007f11654aa290 in QTextEdit::document() const (this=0xe4006e00200073) at widgets/qtextedit.cpp:763
#10 0x00007f11765908cd in KMComposeWin::slotEditorTextChanged() (this=0x56ce380) at /opt/kde/src/kdepim-unsplit/kmail/editor/kmcomposewin.cpp:524
#11 0x00007f116432ef29 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (this=0x8013cd0, r=0x56ce380, a=0x7ffc44779990) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:124
#12 0x00007f116432c00a in QMetaObject::activate(QObject*, int, int, void**) (sender=0x77f3b20, signalOffset=7, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3702
#13 0x00007f116432b922 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=0x77f3b20, m=0x7f1165908f40 <QTextEdit::staticMetaObject>, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3582
#14 0x00007f11654aeee7 in QTextEdit::textChanged() (this=0x77f3b20) at .moc/moc_qtextedit.cpp:519
#15 0x00007f11654ae0b9 in QTextEdit::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=0x77f3b20, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7ffc44779bb0) at .moc/moc_qtextedit.cpp:317
#16 0x00007f116432c115 in QMetaObject::activate(QObject*, int, int, void**) (sender=0x19226d0, signalOffset=3, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3717
#17 0x00007f116432b922 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=0x19226d0, m=0x7f116590ac80 <QWidgetTextControl::staticMetaObject>, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3582
#18 0x00007f11654dce47 in QWidgetTextControl::textChanged() (this=0x19226d0) at .moc/moc_qwidgettextcontrol_p.cpp:476
#19 0x00007f11654dc23a in QWidgetTextControl::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=0x19226d0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7ffc44779e60) at .moc/moc_qwidgettextcontrol_p.cpp:253
#20 0x00007f11654dcb8d in QWidgetTextControl::qt_metacall(QMetaObject::Call, int, void**) (this=0x19226d0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7ffc44779e60) at .moc/moc_qwidgettextcontrol_p.cpp:418
#21 0x00007f11642f162d in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) (object=0x19226d0, cl=QMetaObject::InvokeMetaMethod, idx=5, argv=0x7ffc44779e60) at kernel/qmetaobject.cpp:295
#22 0x00007f116432c1e3 in QMetaObject::activate(QObject*, int, int, void**) (sender=0x1929bd0, signalOffset=3, local_signal_index=1, argv=0x0) at kernel/qobject.cpp:3732
#23 0x00007f116432b922 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=0x1929bd0, m=0x7f11651201a0 <QTextDocument::staticMetaObject>, local_signal_index=1, argv=0x0) at kernel/qobject.cpp:3582
#24 0x00007f1164f2fb27 in QTextDocument::contentsChanged() (this=0x1929bd0) at .moc/moc_qtextdocument.cpp:373
#25 0x00007f1164c96ce0 in QTextDocumentPrivate::contentsChanged() (this=0x409f7a0) at text/qtextdocument_p.cpp:1648
#26 0x00007f1164c953ba in QTextDocumentPrivate::finishEdit() (this=0x409f7a0) at text/qtextdocument_p.cpp:1240
#27 0x00007f1164c95083 in QTextDocumentPrivate::endEditBlock() (this=0x409f7a0) at text/qtextdocument_p.cpp:1195
#28 0x00007f1164cc8eff in QTextCursor::endEditBlock() (this=0x7ffc4477a070) at text/qtextcursor.cpp:2504
#29 0x00007f1164cdc06c in QSyntaxHighlighter::setDocument(QTextDocument*) (this=0x86ff170, doc=0x0) at text/qsyntaxhighlighter.cpp:333
#30 0x00007f1164cdbef5 in QSyntaxHighlighter::~QSyntaxHighlighter() (this=0x86ff170, __in_chrg=<optimized out>) at text/qsyntaxhighlighter.cpp:315
#31 0x00007f1167ff1337 in Sonnet::Highlighter::~Highlighter() (this=0x86ff170, __in_chrg=<optimized out>) at /opt/kde/src/frameworks/sonnet/src/ui/highlighter.cpp:133
#32 0x00007f116ce99244 in KPIMTextEdit::EMailQuoteHighlighter::~EMailQuoteHighlighter() (this=0x86ff170, __in_chrg=<optimized out>) at /opt/kde/src/kde/pim/kpimtextedit/src/emailquotehighlighter.cpp:60
#33 0x00007f116ce99274 in KPIMTextEdit::EMailQuoteHighlighter::~EMailQuoteHighlighter() (this=0x86ff170, __in_chrg=<optimized out>) at /opt/kde/src/kde/pim/kpimtextedit/src/emailquotehighlighter.cpp:62
#34 0x00007f1164326cf4 in QObjectPrivate::deleteChildren() (this=0x93930b0) at kernel/qobject.cpp:1950
#35 0x00007f116432530c in QObject::~QObject() (this=0x9385bb0, __in_chrg=<optimized out>) at kernel/qobject.cpp:1030
#36 0x00007f1167ff4e04 in Sonnet::SpellCheckDecorator::~SpellCheckDecorator() (this=0x9385bb0, __in_chrg=<optimized out>) at /opt/kde/src/frameworks/sonnet/src/ui/spellcheckdecorator.cpp:186
#37 0x00007f116ceb4d80 in KPIMTextEdit::EmailQuoteDecorator::~EmailQuoteDecorator() (this=0x9385bb0, __in_chrg=<optimized out>) at /opt/kde/src/kde/pim/kpimtextedit/src/emailquotedecorator.cpp:45
#38 0x00007f116ceb4db0 in KPIMTextEdit::EmailQuoteDecorator::~EmailQuoteDecorator() (this=0x9385bb0, __in_chrg=<optimized out>) at /opt/kde/src/kde/pim/kpimtextedit/src/emailquotedecorator.cpp:48
#39 0x00007f11684ab0ca in KTextEdit::Private::~Private() (this=0x8587b30, __in_chrg=<optimized out>) at /opt/kde/src/frameworks/ktextwidgets/src/widgets/ktextedit.cpp:96
#40 0x00007f11684a68df in KTextEdit::~KTextEdit() (this=0x77f3b20, __in_chrg=<optimized out>) at /opt/kde/src/frameworks/ktextwidgets/src/widgets/ktextedit.cpp:342
#41 0x00007f116849cd3e in KRichTextEdit::~KRichTextEdit() (this=0x77f3b20, __in_chrg=<optimized out>) at /opt/kde/src/frameworks/ktextwidgets/src/widgets/krichtextedit.cpp:130
#42 0x00007f116849f32d in KRichTextWidget::~KRichTextWidget() (this=0x77f3b20, __in_chrg=<optimized out>) at /opt/kde/src/frameworks/ktextwidgets/src/widgets/krichtextwidget.cpp:194
#43 0x00007f116ceaad3c in KPIMTextEdit::TextEdit::~TextEdit() (this=0x77f3b20, __in_chrg=<optimized out>) at /opt/kde/src/kde/pim/kpimtextedit/src/textedit.cpp:197
#44 0x00007f117658dd71 in KMComposerEditor::~KMComposerEditor() (this=0x77f3b20, __in_chrg=<optimized out>) at /opt/kde/src/kdepim-unsplit/kmail/editor/kmcomposereditor.cpp:60
#45 0x00007f117658dd71 in KMComposerEditor::~KMComposerEditor() (this=0x77f3b20, __in_chrg=<optimized out>) at /opt/kde/src/kdepim-unsplit/kmail/editor/kmcomposereditor.cpp:62
#46 0x00007f1164326cf4 in QObjectPrivate::deleteChildren() (this=0x32e94d0) at kernel/qobject.cpp:1950
#47 0x00007f11652e8149 in QWidget::~QWidget() (this=0x779eea0, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1650
#48 0x00007f11652e8260 in QWidget::~QWidget() (this=0x779eea0, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1670
#49 0x00007f1164326cf4 in QObjectPrivate::deleteChildren() (this=0x3ac92a0) at kernel/qobject.cpp:1950
#50 0x00007f11652e8149 in QWidget::~QWidget() (this=0x55afc40, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1650
#51 0x00007f1165426b04 in QFrame::~QFrame() (this=0x55afc40, __in_chrg=<optimized out>) at widgets/qframe.cpp:209
#52 0x00007f1165494a44 in QSplitter::~QSplitter() (this=0x55afc40, __in_chrg=<optimized out>) at widgets/qsplitter.cpp:960
#53 0x00007f1165494a82 in QSplitter::~QSplitter() (this=0x55afc40, __in_chrg=<optimized out>) at widgets/qsplitter.cpp:966
#54 0x00007f1164326cf4 in QObjectPrivate::deleteChildren() (this=0x65dc150) at kernel/qobject.cpp:1950
#55 0x00007f11652e8149 in QWidget::~QWidget() (this=0x7f23ef0, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1650
#56 0x00007f1165426b04 in QFrame::~QFrame() (this=0x7f23ef0, __in_chrg=<optimized out>) at widgets/qframe.cpp:209
#57 0x00007f1165494a44 in QSplitter::~QSplitter() (this=0x7f23ef0, __in_chrg=<optimized out>) at widgets/qsplitter.cpp:960
#58 0x00007f1165494a82 in QSplitter::~QSplitter() (this=0x7f23ef0, __in_chrg=<optimized out>) at widgets/qsplitter.cpp:966
#59 0x00007f1164326cf4 in QObjectPrivate::deleteChildren() (this=0x876a1a0) at kernel/qobject.cpp:1950
#60 0x00007f11652e8149 in QWidget::~QWidget() (this=0x9479fc0, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1650
#61 0x00007f1165426b04 in QFrame::~QFrame() (this=0x9479fc0, __in_chrg=<optimized out>) at widgets/qframe.cpp:209
#62 0x00007f1165494a44 in QSplitter::~QSplitter() (this=0x9479fc0, __in_chrg=<optimized out>) at widgets/qsplitter.cpp:960
#63 0x00007f1165494a82 in QSplitter::~QSplitter() (this=0x9479fc0, __in_chrg=<optimized out>) at widgets/qsplitter.cpp:966
#64 0x00007f1164326cf4 in QObjectPrivate::deleteChildren() (this=0x2e36530) at kernel/qobject.cpp:1950
#65 0x00007f11652e8149 in QWidget::~QWidget() (this=0x8f2cfb0, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1650
#66 0x00007f11652e8260 in QWidget::~QWidget() (this=0x8f2cfb0, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1670
#67 0x00007f1164326cf4 in QObjectPrivate::deleteChildren() (this=0x7d10d60) at kernel/qobject.cpp:1950
#68 0x00007f11652e8149 in QWidget::~QWidget() (this=0x56ce380, __in_chrg=<optimized out>) at kernel/qwidget.cpp:1650
#69 0x00007f116544287a in QMainWindow::~QMainWindow() (this=0x56ce380, __in_chrg=<optimized out>) at widgets/qmainwindow.cpp:379
#70 0x00007f116906fed1 in KMainWindow::~KMainWindow() (this=0x56ce380, __in_chrg=<optimized out>) at /opt/kde/src/frameworks/kxmlgui/src/kmainwindow.cpp:349
#71 0x00007f11690b0e24 in KXmlGuiWindow::~KXmlGuiWindow() (this=0x56ce380, __vtt_parm=0x7f1176874918 <VTT for KMComposeWin+24>, __in_chrg=<optimized out>) at /opt/kde/src/frameworks/kxmlgui/src/kxmlguiwindow.cpp:110
#72 0x00007f1176599f28 in KMComposeWin::~KMComposeWin() (__vtt_parm=<optimized out>, this=0x56ce380, __in_chrg=<optimized out>) at /opt/kde/src/kdepim-unsplit/kmail/editor/composer.h:39
#73 0x00007f1176599f28 in KMComposeWin::~KMComposeWin() (this=0x56ce380, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /opt/kde/src/kdepim-unsplit/kmail/editor/kmcomposewin.cpp:496
#74 0x00007f117659a0e9 in KMComposeWin::~KMComposeWin() (this=0x56ce380, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /opt/kde/src/kdepim-unsplit/kmail/editor/kmcomposewin.cpp:509
#75 0x00007f116432dc54 in qDeleteInEventHandler(QObject*) (o=0x56ce380) at kernel/qobject.cpp:4391
#76 0x00007f1164325670 in QObject::event(QEvent*) (this=0x56ce380, e=0x400adb0) at kernel/qobject.cpp:1236
#77 0x00007f11652fc204 in QWidget::event(QEvent*) (this=0x56ce380, event=0x400adb0) at kernel/qwidget.cpp:9084
#78 0x00007f11654449d0 in QMainWindow::event(QEvent*) (this=0x56ce380, event=0x400adb0) at widgets/qmainwindow.cpp:1495
#79 0x00007f11690720d1 in KMainWindow::event(QEvent*) (this=0x56ce380, ev=0x400adb0) at /opt/kde/src/frameworks/kxmlgui/src/kmainwindow.cpp:821
#80 0x00007f11690b1015 in KXmlGuiWindow::event(QEvent*) (this=0x56ce380, ev=0x400adb0) at /opt/kde/src/frameworks/kxmlgui/src/kxmlguiwindow.cpp:118
#81 0x00007f11652ab68c in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=0x8980e0, receiver=0x56ce380, e=0x400adb0) at kernel/qapplication.cpp:3720
#82 0x00007f11652ab4f9 in QApplication::notify(QObject*, QEvent*) (this=0x7ffc4477c5e0, receiver=0x56ce380, e=0x400adb0) at kernel/qapplication.cpp:3685
#83 0x00007f11642e8cbe in QCoreApplication::notifyInternal(QObject*, QEvent*) (this=0x7ffc4477c5e0, receiver=0x56ce380, event=0x400adb0) at kernel/qcoreapplication.cpp:935
#84 0x00007f11642ec91f in QCoreApplication::sendEvent(QObject*, QEvent*) (receiver=0x56ce380, event=0x400adb0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:228
#85 0x00007f11642e9ff7 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (receiver=0x0, event_type=0, data=0x873110) at kernel/qcoreapplication.cpp:1552
#86 0x00007f11642e99a6 in QCoreApplication::sendPostedEvents(QObject*, int) (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1410
#87 0x00007f11643617e0 in postEventSourceDispatch(GSource*, GSourceFunc, gpointer) (s=0x8d4d00) at kernel/qeventdispatcher_glib.cpp:271
#88 0x00007f115dfe1c3d in g_main_context_dispatch (context=0x7f113c0016f0) at /build/glib2.0-NiYzoW/glib2.0-2.44.1/./glib/gmain.c:3122
#89 0x00007f115dfe1c3d in g_main_context_dispatch (context=context@entry=0x7f113c0016f0) at /build/glib2.0-NiYzoW/glib2.0-2.44.1/./glib/gmain.c:3737
#90 0x00007f115dfe1f20 in g_main_context_iterate (context=context@entry=0x7f113c0016f0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/glib2.0-NiYzoW/glib2.0-2.44.1/./glib/gmain.c:3808
#91 0x00007f115dfe1fcc in g_main_context_iteration (context=0x7f113c0016f0, may_block=1) at /build/glib2.0-NiYzoW/glib2.0-2.44.1/./glib/gmain.c:3869
#92 0x00007f1164361f9b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x8c9fb0, flags=...) at kernel/qeventdispatcher_glib.cpp:418
#93 0x00007f114367d3ce in QPAEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x8c9fb0, flags=...) at eventdispatchers/qeventdispatcher_glib.cpp:115
#94 0x00007f11642e5962 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7ffc4477bf40, flags=...) at kernel/qeventloop.cpp:128
#95 0x00007f11642e5c3b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7ffc4477bf40, flags=...) at kernel/qeventloop.cpp:204
#96 0x00007f11642e9398 in QCoreApplication::exec() () at kernel/qcoreapplication.cpp:1188
#97 0x00007f1164b66db0 in QGuiApplication::exec() () at kernel/qguiapplication.cpp:1507
#98 0x00007f11652a8635 in QApplication::exec() () at kernel/qapplication.cpp:2956
#99 0x00000000004045b6 in main(int, char**) (argc=1, argv=0x7ffc4477c858) at /opt/kde/src/kdepim-unsplit/kmail/main.cpp:166

Reported using DrKonqi
Comment 1 Laurent Montel 2015-06-04 20:44:23 UTC
I confirm it.
I work on.
It's on progress.
Perhaps reverse kpimtextedit to monday so you will able to send email without crash.

Regards
Comment 2 Laurent Montel 2015-06-05 06:03:10 UTC
Git commit e2656aa2a8bf58eaec6fc359c46be7bd9fc5dc81 by Montel Laurent.
Committed on 05/06/2015 at 06:02.
Pushed by mlaurent into branch 'master'.

Fix Bug 348708 - KF5/KMail: Crash when sending mail

M  +3    -1    kmail/editor/kmcomposewin.cpp

http://commits.kde.org/kdepim/e2656aa2a8bf58eaec6fc359c46be7bd9fc5dc81