Fix Bug 348708 - KF5/KMail: Crash when sending mail

BUG: 348708